--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -56,7 +56,7 @@
 </match>
 
 #Attempt to parse the Annotations MESSAGE field as JSON
-<filter filter docker.annotations>
+<filter docker.annotations>
     @type parser
     key_name MESSAGE
     reserve_data true
