--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -17,20 +17,20 @@
       flush_interval 32s
     </buffer>
     <instance_profile_credentials>
-     ip_address 169.254.169.254
-     port       80b
+      ip_address 169.254.169.254
+      port       80b
     </instance_profile_credentials>
   </store>
 # Relabel annotations and prepare for S3
   <store>
-   @type relabel
-   @label @annotations
+    @type relabel
+    @label @annotations
   </store>
 </match>
 
 ### Annotations Filters###################################################
 <label @annotations>
- <filter docker.annotations.**>
+  <filter docker.annotations>
     @type       record_transformer
     enable_ruby true
     remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME"]
@@ -38,10 +38,10 @@
       event            ${record}
       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
     </record>
- </filter>
+  </filter>
 ### End Annotations Filter ###################################
 
- <match docker.annotations.**>
+ <match docker.annotations>
    @type s3
    @log_level info
    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
@@ -53,15 +53,15 @@
    store_as text
   
    <buffer>
-    @type file_single
+     @type file_single
      path /var/log/fluentd-buffers/s3-annotations.buffer
      timekey 3600 # 1 hour partition
      timekey_wait 5m
      timekey_use_utc true # use utc
-    flush_mode interval
-    flush_interval 120s
-    chunk_limit_size 32m  
-    flush_thread_count 2
+     flush_mode interval
+     flush_interval 120s
+     chunk_limit_size 32m  
+     flush_thread_count 2
    </buffer>
 
    <format>
@@ -80,15 +80,15 @@
 <match docker.services>
   @type s3
   @log_level info
-   aws_key_id "#{ENV['S3_ACCESS_KEY']}"
-   aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
-   s3_bucket "#{ENV['BUCKET_NAME']}"
-   s3_region "#{ENV['AWS_REGION']}"
-   s3_object_key_format %{path}/fluentd-_%{time_slice}%{hex_random}_%{hostname}
-   path "#{ENV['ENVIRONMENT_NAME']}"
-   store_as text
+  aws_key_id "#{ENV['S3_ACCESS_KEY']}"
+  aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
+  s3_bucket "#{ENV['BUCKET_NAME']}"
+  s3_region "#{ENV['AWS_REGION']}"
+  s3_object_key_format %{path}/fluentd-_%{time_slice}%{hex_random}_%{hostname}
+  path "#{ENV['ENVIRONMENT_NAME']}"
+  store_as text
 
-   <buffer>
+  <buffer>
      @type file_single
      path /var/log/fluentd-buffers/s3.buffer
      timekey 3600 # 1 hour partition
@@ -98,16 +98,16 @@
      flush_interval 120s
      chunk_limit_size 32m 
      flush_thread_count 2
-   </buffer>
+  </buffer>
 
-   <format>
+  <format>
     @type json
-   </format>
+  </format>
 
-   <instance_profile_credentials>
-     ip_address 169.254.169.254
-     port       80b
-   </instance_profile_credentials>
+  <instance_profile_credentials>
+    ip_address 169.254.169.254
+    port       80b
+  </instance_profile_credentials>
 </match>
 
 #<label @FLUENT_LOG>
