tune buffers and filters

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -11,8 +11,7 @@
       HOSTNAME          ${record["_HOSTNAME"]}
       MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
-      POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" }
-      
+      POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" } 
    </record>
 </filter>
 # Retagging
@@ -88,30 +87,30 @@
 #     </parse>
 # </filter>
 
-<filter docker.services>
-      @type       record_transformer
-      enable_ruby true
-      remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME"]
-      <record>
-       event            ${record}
-       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-      </record>
-</filter>
+# <filter docker.services>
+#       @type       record_transformer
+#       enable_ruby true
+#       remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME"]
+#       <record>
+#        event            ${record}
+#        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+#       </record>
+# </filter>
 
 #Check if this can be removed/overcomed
 
-#<filter docker.services> 
-#     @type       record_transformer
-#     enable_ruby true
-#     <record>
-#        event            ${record}
-#        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-#     </record>
-# </filter>
+<filter docker.services> 
+    @type       record_transformer
+    enable_ruby true
+    <record>
+       event            ${record}
+       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+    </record>
+</filter>
 
-# <filter docker.services> 
-#    @type       record_transformer
-#    enable_ruby true
-# #   renew_record true
-#    keep_keys event, time
-# </filter>
+<filter docker.services> 
+   @type       record_transformer
+   enable_ruby true
+   renew_record true
+   keep_keys event, time
+</filter>
