--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -14,7 +14,7 @@
     aws_sec_key "#{ENV['S3_SECRET_ACCESS_KEY']}"
     <buffer>
       flush_mode interval
-      flush_interval 2s
+      flush_interval 10s
     </buffer>
     <instance_profile_credentials>
       ip_address 169.254.169.254
@@ -31,17 +31,22 @@
 ### Annotations Filters###################################################
 <label @annotations>
   <filter docker.annotations>
-    @type       record_transformer
+    @type  record_transformer
     enable_ruby true
-    remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME"]
     <record>
-      event            ${record}
-      time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+       event            ${record}
+       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
     </record>
+  </filter>
+  <filter docker.annotations> 
+    @type  record_transformer
+    enable_ruby true
+    renew_record true
+    keep_keys event, time
   </filter>
 ### End Annotations Filter ###################################
 
- <match docker.annotations>
+  <match docker.annotations>
    @type s3
    @log_level info
    aws_key_id "#{ENV['S3_ACCESS_KEY']}"
@@ -59,9 +64,9 @@
      timekey_wait 5m
      timekey_use_utc true # use utc
      flush_mode interval
-     flush_interval 120s
+     flush_interval 90s
      chunk_limit_size 32m  
-     flush_thread_count 2
+     flush_thread_count 4
    </buffer>
 
    <format>
@@ -95,9 +100,9 @@
      timekey_wait 5m
      timekey_use_utc true # use utc
      flush_mode interval
-     flush_interval 120s
+     flush_interval 90s
      chunk_limit_size 32m 
-     flush_thread_count 2
+     flush_thread_count 4
   </buffer>
 
   <format>
