Tune systemd plugin and s3 output settings

--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -7,7 +7,7 @@
   path /var/log/journal
   <storage>
   @type local
-    persistent true
+    persistent false
     path /var/log/journald_pos.json
   </storage>
 </source>
