Enable all parsers and filters. Clean Code.

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -2,9 +2,9 @@
 @include systemd.conf
 @include docker.conf
 
-# Only process monitoring_events of content_type 'Annotations'
+# Only process monitoring_events of content_type 'Annotations' to Kinesis
 <match docker.annotations>  
-#  In order to redirect annotation logs to S3 and Kinesis we need to copy them
+  # In order to redirect annotation logs to S3 and Kinesis we need to copy them
   @type copy
   deep_copy true
   <store>
@@ -21,14 +21,14 @@
       port       80b
     </instance_profile_credentials>
   </store>
-# Relabel annotations and prepare for S3
+  # Relabel annotations and prepare for S3
   <store>
     @type relabel
     @label @annotations
   </store>
 </match>
 
-
+# Send annotation monitoring events to S3 (SPLUNK) as well
 <label @annotations>
   ### Annotations Filters###################################################
   <filter docker.annotations>
@@ -83,7 +83,7 @@
 </label>
 
 #Match all remaining logs, and output them to the fluentd /dev/null equivalent for now
-<match docker.services>
+<match docker.**>
   @type s3
   @log_level info
   aws_key_id "#{ENV['S3_ACCESS_KEY']}"
@@ -116,6 +116,7 @@
   </instance_profile_credentials>
 </match>
 
+# Enable section if Fluentd troubleshooting is needed, set log level to debug on each input/match/output rule
 #<label @FLUENT_LOG>
 #  <match fluent.*>
 #    @type stdout
