--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -1,12 +1,14 @@
 # Read logs from journald from the docker systemd unit.
 <source>
   @type systemd
-  @log_level debug
+  @log_level info
   tag docker.source
-  matches [{ "_SYSTEMD_UNIT": "docker.service" }]
-  path /var/log/journal
+  # Match only docker.service, kubelet.service, authorized_keys.service, init.scope logs from Journld  
+  matches [{ "_SYSTEMD_UNIT": "docker.service" }, {"_SYSTEMD_UNIT": "kubelet.service"}, {"_SYSTEMD_UNIT": "authorized_keys.service"}, {"_SYSTEMD_UNIT": "init.scope"}]
+  path /var/log/journal #default
   <storage>
   @type local
+    # !!Keep persistent to false (update pos file each second not for each record), dramatically reduces the IOPS!!
     persistent false
     path /var/log/journald_pos.json
   </storage>
