--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -14,7 +14,7 @@
       POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" } 
    </record>
 </filter>
-# Retagging
+# Split stream via retagging of the events
 <match docker.source>
    @type rewrite_tag_filter
    emit_mode batch
@@ -38,7 +38,8 @@
       pattern dockerd
       tag blacklisted.syslogids
    </rule>
-
+   
+   # Tag annotations events for monitoring purposes, later redirect to Kinesis
    <rule>
       key MESSAGE
       pattern /\"monitoring_event\":\"true/
@@ -49,18 +50,17 @@
    <rule>
      key     SERVICE_NAME
      pattern (.+)
-     tag     docker.services
+     tag     docker.service_name.$1
    </rule>
 
 </match>
 
 #Attempt to parse the Annotations MESSAGE field as JSON
-<filter docker.annotations>
+<filter docker.**>
     @type parser
     key_name MESSAGE
     reserve_data true
     emit_invalid_record_to_error false
-    
     <parse>
        # Parse the MESSAGE field as json, and merge the new fields into the log message
        @type json
@@ -74,43 +74,30 @@
       event_time        ${ record["@time"] != nil ? record["@time"] : "" }
     </record>
 </filter>
-# #Parse Varnish logs
-# <filter docker.service_name.*>
-#     @type parser
-#     key_name MESSAGE
+#Parse Varnish logs 
+<filter docker.service_name.*>
+    @type parser
+    key_name MESSAGE
+    reserve_data true
+    emit_invalid_record_to_error false
+    <parse>
+          @type regexp
+          expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
+    </parse>
+</filter>
 
-#     reserve_data true
-#     emit_invalid_record_to_error false
-#     <parse>
-#           @type regexp
-#           expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
-#     </parse>
-# </filter>
-
-# <filter docker.services>
-#       @type       record_transformer
-#       enable_ruby true
-#       remove_keys ["CONTAINER_TAG","SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP","SERVICE_NAME","transaction_id","platform","SYSTEMD_UNIT","HOSTNAME","MESSAGE","environment","POD_NAME"]
-#       <record>
-#        event            ${record}
-#        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-#       </record>
-# </filter>
-
-#Check if this can be removed/overcomed
-
-<filter docker.services> 
+# SPLUNK requires two mandatory fields event and time. Events are transformed like MESSAGE - > event, epoch_time -> time
+<filter docker.service_name.*> 
     @type       record_transformer
     enable_ruby true
+
+    # Add new fields event and time
     <record>
        event            ${record}
        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
     </record>
-</filter>
 
-<filter docker.services> 
-   @type       record_transformer
-   enable_ruby true
-   renew_record true
-   keep_keys event, time
+    # Keep only event and time field
+    renew_record true
+    keep_keys event, time
 </filter>
