rework systemd match rule

--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -3,8 +3,8 @@
   @type systemd
   @log_level info
   tag docker.source
-  # Match only docker.service, kubelet.service, authorized_keys.service, init.scope logs from Journld  
-  matches [{ "_SYSTEMD_UNIT": "docker.service" }, {"_SYSTEMD_UNIT": "kubelet.service"}, {"_SYSTEMD_UNIT": "authorized_keys.service"}, {"_SYSTEMD_UNIT": "init.scope"}]
+  # Match only docker.service, kubelet.service, authorized_keys.service, init.scope logs from Journld
+  matches [{"_SYSTEMD_UNIT": ["docker.service", "kubelet.service", "authorized_keys.service", "init.scope"]}]
   path /var/log/journal #default
   <storage>
   @type local
