--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -52,7 +52,11 @@
      pattern (.+)
      tag     docker.service_name.$1
    </rule>
-
+   # Tag rest of the journald services  
+   <rules>
+      key SYSTEMD_UNIT
+      pattern kubelet.service|authorized_keys.service|init.scope
+      tag docker.source
 </match>
 
 #Attempt to parse the Annotations MESSAGE field as JSON
