--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -53,10 +53,11 @@
      tag     docker.service_name.$1
    </rule>
    # Tag rest of the journald services  
-   <rules>
+   <rule>
       key SYSTEMD_UNIT
       pattern kubelet.service|authorized_keys.service|init.scope
       tag docker.source
+   </rule>
 </match>
 
 #Attempt to parse the Annotations MESSAGE field as JSON
