add all docker.* logs to event/time rule

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -60,18 +60,19 @@
    </rule>
 </match>
 
-#Attempt to parse the Annotations MESSAGE field as JSON
+#Attempt to parse MESSAGE field as JSON
 <filter docker.**>
     @type parser
     key_name MESSAGE
     reserve_data true
     emit_invalid_record_to_error false
     <parse>
-       # Parse the MESSAGE field as json, and merge the new fields into the log message
+       # Parse MESSAGE field as json, and merge the new fields into the log message
        @type json
     </parse>
 </filter>
-# Add event_time as kinesis doesn't support @time
+
+# Add event_time as kinesis doesn't support @time (Annotations logs only)
 <filter docker.annotations>
     @type       record_transformer
     enable_ruby true
@@ -79,7 +80,8 @@
       event_time        ${ record["@time"] != nil ? record["@time"] : "" }
     </record>
 </filter>
-#Parse Varnish logs 
+
+#Parse Varnish logs (regex)
 <filter docker.service_name.*>
     @type parser
     key_name MESSAGE
@@ -92,7 +94,7 @@
 </filter>
 
 # SPLUNK requires two mandatory fields event and time. Events are transformed like MESSAGE - > event, epoch_time -> time
-<filter docker.service_name.*> 
+<filter docker.**> 
     @type       record_transformer
     enable_ruby true
 
