Reorder match rules.

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -20,30 +20,37 @@
    emit_mode batch
    # Filter out events with synthetic requests, healthchecks or excessive volume mount logs.
    <rule>
-      key MESSAGE
+      key   MESSAGE
       pattern \/__health|\"transaction_id\":\"SYNTHETIC-REQ|\/__gtg|transaction_id=SYNTHETIC-REQ|MountVolume.SetUp succeeded for volume
       tag blacklisted.message
    </rule>
 
    # Filter out blacklisted container tags
    <rule>
-      key CONTAINER_TAG
+      key   CONTAINER_TAG
       pattern gcr.io\/google_containers\/heapster|gcr.io\/google_containers\/kubedns-amd64|gcr.io\/google_containers\/addon-resizer|coco\/resilient-splunk-forwarder
       tag blacklisted.tags
    </rule>
 
    # Filter out docker daemon logs
    <rule>
-      key SYSLOG_IDENTIFIER
+      key   SYSLOG_IDENTIFIER
       pattern dockerd
       tag blacklisted.syslogids
    </rule>
    
    # Tag annotations events for monitoring purposes, later redirect to Kinesis
    <rule>
-      key MESSAGE
+      key   MESSAGE
       pattern /\"monitoring_event\":\"true/
       tag docker.annotations
+   </rule>
+   
+   # Tag rest of the journald services 
+   <rule>
+      key   SYSTEMD_UNIT
+      pattern kubelet.service
+      tag docker.source
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
@@ -52,12 +59,7 @@
      pattern (.+)
      tag     docker.service_name.$1
    </rule>
-   # Tag rest of the journald services  
-   <rule>
-      key SYSTEMD_UNIT
-      pattern kubelet.service|authorized_keys.service|init.scope
-      tag docker.source
-   </rule>
+
 </match>
 
 #Attempt to parse MESSAGE field as JSON
@@ -97,6 +99,9 @@
 <filter docker.**> 
     @type       record_transformer
     enable_ruby true
+    
+    # Remove more fields
+    remove_keys ["CONTAINER_TAG", "_SOURCE_REALTIME_TIMESTAMP", "SYSLOG_IDENTIFIER"]
 
     # Add new fields event and time
     <record>
