forward kubelet logs to stdout for troubleshooting

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -39,7 +39,7 @@
       tag blacklisted.syslogids
    </rule>
    
-   # Tag annotations events for monitoring purposes, later redirect to Kinesis
+   # Tag annotations events for monitoring purposes, later redirected to Kinesis
    <rule>
       key   MESSAGE
       pattern /\"monitoring_event\":\"true/
@@ -50,7 +50,7 @@
    <rule>
       key   SYSTEMD_UNIT
       pattern kubelet.service
-      tag docker.source
+      tag other.kubelet
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
@@ -96,14 +96,19 @@
 </filter>
 
 # SPLUNK requires two mandatory fields event and time. Events are transformed like MESSAGE - > event, epoch_time -> time
+# First remove unnecessary fields
 <filter docker.**> 
     @type       record_transformer
     enable_ruby true
-    
-    # Remove more fields
-    remove_keys ["CONTAINER_TAG", "_SOURCE_REALTIME_TIMESTAMP", "SYSLOG_IDENTIFIER"]
 
-    # Add new fields event and time
+    # Remove more fields
+    remove_keys ["CONTAINER_TAG", "SYSLOG_IDENTIFIER"]
+</filter>
+
+# Add new fields event and time
+<filter docker.**> 
+    @type       record_transformer
+    enable_ruby true
     <record>
        event            ${record}
        time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
