update matching rules

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -50,7 +50,7 @@
    <rule>
       key   SYSTEMD_UNIT
       pattern kubelet.service
-      tag other.kubelet
+      tag docker.kubelet
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
