fix timestamp field

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -50,7 +50,7 @@
    <rule>
       key   SYSTEMD_UNIT
       pattern kubelet.service
-      tag docker.kubelet
+      tag   docker.kubelet
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
@@ -102,7 +102,7 @@
     enable_ruby true
 
     # Remove more fields
-    remove_keys ["CONTAINER_TAG", "SYSLOG_IDENTIFIER"]
+    remove_keys ["CONTAINER_TAG", "SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP"]
 </filter>
 
 # Add new fields event and time
@@ -111,7 +111,7 @@
     enable_ruby true
     <record>
        event            ${record}
-       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+       time             ${record["timestamp"]}
     </record>
 
     # Keep only event and time field
