--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -6,8 +6,11 @@
   # Match only docker.service, kubelet.service, authorized_keys.service, init.scope logs from Journld
   matches [{"_SYSTEMD_UNIT": ["docker.service", "kubelet.service", "authorized_keys.service", "init.scope"]}]
   path /var/log/journal #default
+  #Set time key to unixtime (SPLUNK expected epoc)
+  time_key timestamp
+  time_type unixtime
   <storage>
-  @type local
+    @type local
     # !!Keep persistent to false (update pos file each second not for each record), dramatically reduces the IOPS!!
     persistent false
     path /var/log/journald_pos.json
