test unixtime timestamp

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -12,6 +12,7 @@
       MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
       POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" } 
+      unixtime          ${time.now.to_i}
    </record>
 </filter>
 # Split stream via retagging of the events
@@ -111,7 +112,7 @@
     enable_ruby true
     <record>
        event            ${record}
-       time             ${record["timestamp"]}
+       time             ${record["unixtime"]}
     </record>
 
     # Keep only event and time field
