--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -36,7 +36,7 @@
     enable_ruby true
     <record>
        event            ${record}
-       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+       time             ${record["unixtime"]}
     </record>
   </filter>
   <filter docker.annotations> 
