Exclude field _SOURCE_REALTIME_TIMESTAMP from deleted fields

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -103,7 +103,7 @@
     enable_ruby true
 
     # Remove more fields
-    remove_keys ["CONTAINER_TAG", "SYSLOG_IDENTIFIER","_SOURCE_REALTIME_TIMESTAMP"]
+    remove_keys ["CONTAINER_TAG", "SYSLOG_IDENTIFIER"]
 </filter>
 
 # Add new fields event and time
