--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -12,7 +12,6 @@
       MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
       POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" } 
-      unixtime          ${time}
    </record>
 </filter>
 # Split stream via retagging of the events
@@ -31,6 +30,14 @@
       key   CONTAINER_TAG
       pattern gcr.io\/google_containers\/heapster|gcr.io\/google_containers\/kubedns-amd64|gcr.io\/google_containers\/addon-resizer|coco\/resilient-splunk-forwarder
       tag blacklisted.tags
+   </rule>
+
+   # Filter out blacklisted services
+   
+   <rule>
+      key   SERVICE_NAME
+      pattern resilient-splunk-forwarder
+      tag blacklisted.services
    </rule>
 
    # Filter out docker daemon logs
@@ -112,7 +119,7 @@
     enable_ruby true
     <record>
        event            ${record}
-       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+       time             ${time.to_i}
     </record>
 
     # Keep only event and time field
