Clean code, add comments.

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -2,6 +2,8 @@
 @include systemd.conf
 @include docker.conf
 
+#### OUTPUT SECTION #####
+
 # Only process monitoring_events of content_type 'Annotations' to Kinesis
 <match docker.annotations>  
   # In order to redirect annotation logs to S3 and Kinesis we need to copy them
@@ -123,6 +125,7 @@
 #  </match>
 #</label>
 
+# Drop all events tagged as blacklisted.*
 <match blacklisted.*>
   @type null
 </match>
