--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -2,7 +2,7 @@
 <filter docker.source>
    @type       record_transformer
    enable_ruby true
-   remove_keys ["_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SYSTEMD_INVOCATION_ID"]
+   remove_keys ["_SOURCE_REALTIME_TIMESTAMP","_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SYSTEMD_INVOCATION_ID"]
    <record>
       SERVICE_NAME      ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
       transaction_id    ${ /\btransaction_id=(?<transaction_id>[A-Za-z0-9\-_:]+)/ =~ record["MESSAGE"] && transaction_id != nil ? transaction_id : "" }
@@ -14,8 +14,9 @@
       POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" } 
    </record>
 </filter>
-# Split stream via retagging of the events
+# Split log stream via retagging of the events
 <match docker.source>
+
    @type rewrite_tag_filter
    emit_mode batch
    # Filter out events with synthetic requests, healthchecks or excessive volume mount logs.
@@ -70,6 +71,23 @@
 
 </match>
 
+# Remove fields used for blacklisting groups above
+<filter docker.**> 
+    @type       record_transformer
+    enable_ruby true
+    remove_keys ["CONTAINER_TAG", "SYSLOG_IDENTIFIER"]
+</filter>
+
+# Add event_time as kinesis doesn't support @time (Annotations logs only)
+<filter docker.annotations>
+    @type       record_transformer
+    enable_ruby true
+    <record>
+      event_time        ${ record["@time"] != nil ? record["@time"] : "" }
+    </record>
+</filter>
+
+#### START PARSE Section ###### 
 #Attempt to parse MESSAGE field as JSON
 <filter docker.**>
     @type parser
@@ -82,16 +100,7 @@
     </parse>
 </filter>
 
-# Add event_time as kinesis doesn't support @time (Annotations logs only)
-<filter docker.annotations>
-    @type       record_transformer
-    enable_ruby true
-    <record>
-      event_time        ${ record["@time"] != nil ? record["@time"] : "" }
-    </record>
-</filter>
-
-#Parse Varnish logs (regex)
+#Parse Varnish logs (via custom regex)
 <filter docker.service_name.*>
     @type parser
     key_name MESSAGE
@@ -103,17 +112,9 @@
     </parse>
 </filter>
 
-# SPLUNK requires two mandatory fields event and time. Events are transformed like MESSAGE - > event, epoch_time -> time
-# First remove unnecessary fields
-<filter docker.**> 
-    @type       record_transformer
-    enable_ruby true
+#### END PARSE Section #####
 
-    # Remove more fields
-    remove_keys ["CONTAINER_TAG", "SYSLOG_IDENTIFIER"]
-</filter>
-
-# Add new fields event and time
+# SPLUNK requires two mandatory fields - > event and time. All log data is put in event field, time field is based on epoch format.
 <filter docker.**> 
     @type       record_transformer
     enable_ruby true
@@ -121,7 +122,6 @@
        event            ${record}
        time             ${time.to_i}
     </record>
-
     # Keep only event and time field
     renew_record true
     keep_keys event, time
