--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -1,4 +1,5 @@
-# Read logs from journald from the docker systemd unit.
+#### INPUT SECTION #####
+# Read logs from journald, all k8s containers log-drivers are set to use journald.
 <source>
   @type systemd
   @log_level info
@@ -9,7 +10,7 @@
   #Set time key to unixtime (SPLUNK expected epoc)
   <storage>
     @type local
-    # !!Keep persistent to false (update pos file each second not for each record), dramatically reduces the IOPS!!
+    # !!Keep persistent to false (false means that pos file is updated each second not for each record), dramatically reduces volume IOPS!!
     persistent false
     path /var/log/journald_pos.json
   </storage>
