Fix timestamp value

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -35,11 +35,11 @@
 
    # Filter out blacklisted services
    
-   <rule>
-      key   SERVICE_NAME
-      pattern resilient-splunk-forwarder
-      tag blacklisted.services
-   </rule>
+   # <rule>
+   #    key   SERVICE_NAME
+   #    pattern resilient-splunk-forwarder
+   #    tag blacklisted.services
+   # </rule>
 
    # Filter out docker daemon logs
    <rule>
@@ -120,7 +120,7 @@
     enable_ruby true
     <record>
        event            ${record}
-       time             ${time.to_i}
+       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
     </record>
     # Keep only event and time field
     renew_record true
