--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -2,7 +2,7 @@
 <filter docker.source>
    @type       record_transformer
    enable_ruby true
-   remove_keys ["_SOURCE_REALTIME_TIMESTAMP","_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SYSTEMD_INVOCATION_ID"]
+   remove_keys ["_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SYSTEMD_INVOCATION_ID"]
    <record>
       SERVICE_NAME      ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
       transaction_id    ${ /\btransaction_id=(?<transaction_id>[A-Za-z0-9\-_:]+)/ =~ record["MESSAGE"] && transaction_id != nil ? transaction_id : "" }
@@ -35,11 +35,11 @@
 
    # Filter out blacklisted services
    
-   # <rule>
-   #    key   SERVICE_NAME
-   #    pattern resilient-splunk-forwarder
-   #    tag blacklisted.services
-   # </rule>
+   <rule>
+      key   SERVICE_NAME
+      pattern resilient-splunk-forwarder
+      tag blacklisted.services
+   </rule>
 
    # Filter out docker daemon logs
    <rule>
@@ -101,16 +101,16 @@
 </filter>
 
 #Parse Varnish logs (via custom regex)
-# <filter docker.service_name.*>
-#     @type parser
-#     key_name MESSAGE
-#     reserve_data true
-#     emit_invalid_record_to_error false
-#     <parse>
-#           @type regexp
-#           expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
-#     </parse>
-# </filter>
+<filter docker.service_name.*>
+    @type parser
+    key_name MESSAGE
+    reserve_data true
+    emit_invalid_record_to_error false
+    <parse>
+          @type regexp
+          expression /^[\d\.\,\s]+\s+(?<authuser>\S+)\s+[\w:\/]+\s+(?<uri>\S+)\s+(?<status>[0-9]{3}|[-]{1})\s+(?<resptime>[0-9\.]+)\s+\"(?<useragent>[\S\s]+)\"\stransaction_id=(?<transaction_id>[\S]+)+\s+(?<other>\w+)/
+    </parse>
+</filter>
 
 #### END PARSE Section #####
 
