--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -33,20 +33,20 @@
 # Send annotation monitoring events to S3 (SPLUNK) as well
 <label @annotations>
   ### Annotations Filters###################################################
-  <filter docker.annotations>
-    @type  record_transformer
-    enable_ruby true
-    <record>
-       event            ${record}
-       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
-    </record>
-  </filter>
-  <filter docker.annotations> 
-    @type  record_transformer
-    enable_ruby true
-    renew_record true
-    keep_keys event, time
-  </filter>
+  # <filter docker.annotations>
+  #   @type  record_transformer
+  #   enable_ruby true
+  #   <record>
+  #      event            ${record}
+  #      time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+  #   </record>
+  # </filter>
+  # <filter docker.annotations> 
+  #   @type  record_transformer
+  #   enable_ruby true
+  #   renew_record true
+  #   keep_keys event, time
+  # </filter>
   ### End Annotations Filter ###################################
 
   <match docker.annotations>
