Update fluentd timestamps

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -120,7 +120,7 @@
     enable_ruby true
     <record>
        event            ${record}
-       time             ${record["_SOURCE_REALTIME_TIMESTAMP"]}
+       time             ${time.to_i}
     </record>
     # Keep only event and time field
     renew_record true
