Fix json parser time format

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -59,7 +59,7 @@
    <rule>
       key   SYSTEMD_UNIT
       pattern kubelet.service
-      tag   docker.kubelet
+      tag   docker.service_name.kubelet
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
@@ -96,6 +96,8 @@
     emit_invalid_record_to_error false
     <parse>
        # Parse MESSAGE field as json, and merge the new fields into the log message
+       time_key @time
+       keep_time_key true
        @type json
     </parse>
 </filter>
@@ -115,7 +117,7 @@
 #### END PARSE Section #####
 
 # SPLUNK requires two mandatory fields - > event and time. All log data is put in event field, time field is based on epoch format.
-<filter docker.**> 
+<filter docker.service_name.*> 
     @type       record_transformer
     enable_ruby true
     <record>
