Add timestamp to json parser and test

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -96,7 +96,7 @@
     emit_invalid_record_to_error false
     <parse>
        # Parse MESSAGE field as json, and merge the new fields into the log message
-       time_key @time
+       time_key @timestamp
        keep_time_key true
        @type json
     </parse>
