--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -4,14 +4,15 @@
    enable_ruby true
    remove_keys ["_SYSTEMD_UNIT","_HOSTNAME","CONTAINER_NAME","_GID","_CAP_EFFECTIVE","SYSLOG_FACILITY","PRIORITY","_BOOT_ID","_CMDLINE","_COMM","_EXE","_SYSTEMD_CGROUP","_SYSTEMD_SLICE","_TRANSPORT","_UID","__CURSOR","__MONOTONIC_TIMESTAMP","_SELINUX_CONTEXT","__REALTIME_TIMESTAMP","_PID","CONTAINER_ID","CONTAINER_ID_FULL","_MACHINE_ID","_SYSTEMD_INVOCATION_ID"]
    <record>
-      SERVICE_NAME      ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
+      SERVICE_NAME      ${record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
       transaction_id    ${ /\btransaction_id=(?<transaction_id>[A-Za-z0-9\-_:]+)/ =~ record["MESSAGE"] && transaction_id != nil ? transaction_id : "" }
       platform          upp-k8s
       SYSTEMD_UNIT      ${record["_SYSTEMD_UNIT"]}
       HOSTNAME          ${record["_HOSTNAME"]}
-      MESSAGE           ${ record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
+      LOGTIME           ${record["@timestamp"] 
+      MESSAGE           ${record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
-      POD_NAME          ${ record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" } 
+      POD_NAME          ${record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" } 
    </record>
 </filter>
 # Split log stream via retagging of the events
@@ -88,7 +89,7 @@
     emit_invalid_record_to_error false
     <parse>
        # Parse MESSAGE field as json, and merge the new fields into the log message
-       time_key @timestamp
+       time_key LOGTIME
        keep_time_key true
        @type json
     </parse>
