--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -38,7 +38,7 @@
      enable_ruby true
      <record>
         event            ${record}
-        time             ${time.to_i}
+        time             ${record["LOGTIME"]}
      </record>
   </filter>
   <filter docker.annotations> 
