--- a/helm/content-fluentd/values.yaml
+++ b/helm/content-fluentd/values.yaml
@@ -8,7 +8,7 @@ image:
 resources:
   limits:
     cpu: 600m
-    memory: 400Mi
+    memory: 300i
   requests:
     cpu: 100m
-    memory: 400Mi
+    memory: 200Mi
