Add MACHINE ID Disable option "Reserve Data" on json parser Other Minor fixes

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -6,13 +6,14 @@
    <record>
       SERVICE_NAME      ${record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[1].split(".")[0] : "" }
       transaction_id    ${ /\btransaction_id=(?<transaction_id>[A-Za-z0-9\-_:]+)/ =~ record["MESSAGE"] && transaction_id != nil ? transaction_id : "" }
-      platform          upp-k8s
+      platform          up-k8s
       SYSTEMD_UNIT      ${record["_SYSTEMD_UNIT"]}
       HOSTNAME          ${record["_HOSTNAME"]}
       LOGTIME           ${time.to_i.to_s + time.usec.to_s}
       MESSAGE           ${record["MESSAGE"] != nil ? record["MESSAGE"].gsub(/(?i)api_?key(?-i)=[^\s&]+/, 'apiKey=********') : record["MESSAGE"] } # obfuscate API Keys (if there are any)
       environment       "#{ENV['ENVIRONMENT_NAME']}"
-      POD_NAME          ${record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" } 
+      POD_NAME          ${record["CONTAINER_NAME"] != nil && record["CONTAINER_NAME"].split("_").length >= 2 ? record["CONTAINER_NAME"].split("_")[2].split(".")[0] : "" }
+      MACHINE_ID        ${record["_MACHINE_ID"]}
    </record>
 </filter>
 # Split log stream via retagging of the events
@@ -85,7 +86,6 @@
 <filter docker.**>
     @type parser
     key_name MESSAGE
-    reserve_data true
     emit_invalid_record_to_error false
     <parse>
        # Parse MESSAGE field as json, and merge the new fields into the log message
