Add "remove_key_name_field" option for all parsers

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -86,6 +86,8 @@
 <filter docker.**>
     @type parser
     key_name MESSAGE
+    # Remove MESSAGE field if parsing is successful
+    remove_key_name_field true 
     emit_invalid_record_to_error false
     <parse>
        # Parse MESSAGE field as json, and merge the new fields into the log message
@@ -99,7 +101,8 @@
 <filter docker.service_name.*>
     @type parser
     key_name MESSAGE
-    reserve_data true
+    # Remove MESSAGE field if parsing is successful
+    remove_key_name_field true
     emit_invalid_record_to_error false
     <parse>
           @type regexp
