Add to parsers: - remove_key_name_field true - reserve_data true

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -87,7 +87,8 @@
     @type parser
     key_name MESSAGE
     # Remove MESSAGE field if parsing is successful
-    remove_key_name_field true 
+    remove_key_name_field true
+    reserve_data true 
     emit_invalid_record_to_error false
     <parse>
        # Parse MESSAGE field as json, and merge the new fields into the log message
@@ -103,6 +104,7 @@
     key_name MESSAGE
     # Remove MESSAGE field if parsing is successful
     remove_key_name_field true
+    reserve_data true
     emit_invalid_record_to_error false
     <parse>
           @type regexp
