Feature/cph 121 replicate log collector processing (#9)
* Update fluent.conf with S3 settings

* Add new ruby gem

* Fix S3 credentials

* Add aws secrets

* Update aws s3 iam

* update fluentd config

* update matching rules

* Disable tag rewriting

* Update filters and matching rules

* Update S3 plugin buffers

* Fix timeslice config

* update fluentd version

* Update fluentd

* Update fluentd

* Update Fluentd to latest stable

* Update Ruby Gems and dependencies

* Update parser

* Refactoring code to match  FluentD v1.0 (latest stable)

* Fix parser code.

* More filters added

* change rules order.

* update config

* Update json parser

* Update json format

* Update Json output format to match required one from SPLUNK

* update S3 output

* update s3 plugin settings

* Update Time attribute

* Fix timestamp

* Update Helm chart and S3 Paths

* Add Varnish regex format, reorganize filter rules.

* fix buffer name

* Update varnish parse regex

* create new parser filter section

* fix regex parser

* update parser

* disable varnish regex

* fix fluentd syntax

* add POD Name

* Update varnish regex

* Fix POD_NAME field

* Modify varnish regex expression

* Update Helm config

* Fix Kinesis log stream

* Fix Kinesis Credentials

* Test Kinesis stream

* Update AWS credentials

* test kinesis streams

* Test kinesis strteam

* test kinesis streams

* test kinesis

* test kinesis streams

* test fluentd stream

* test kinesis streams

* Test Kinesis filters

* update rules and filters

* add copy output

* fix buffer path

* update json parsing rule

* Add new regex rule

* Test Kinesis streams

* Enable S3 output

* Improve matching rules.

* add copy directive for annotation logs

* add deep copy feature

* Update S3 buffers

* Restructure annotation logs

* Update S3 bucket and fluentd labels

* Reconfigure S3 buffer set

--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -1,8 +1,17 @@
-# Read logs from journald from the docker systemd unit.
+#### INPUT SECTION #####
+# Read logs from journald, all k8s containers log-drivers are set to use journald.
 <source>
   @type systemd
-  filters [{ "_SYSTEMD_UNIT": "docker.service" }]
-  pos_file /var/log/fluentd-journald-docker.pos
-  read_from_head true
+  @log_level info
   tag docker.source
+  # Match only docker.service, kubelet.service, authorized_keys.service, init.scope logs from Journld
+  matches [{"_SYSTEMD_UNIT": ["docker.service", "kubelet.service", "authorized_keys.service", "init.scope"]}]
+  path /var/log/journal #default
+  #Set time key to unixtime (SPLUNK expected epoc)
+  <storage>
+    @type local
+    # !!Keep persistent to false (false means that pos file is updated each second not for each record), dramatically reduces volume IOPS!!
+    persistent false
+    path /var/log/journald_pos.json
+  </storage>
 </source>
