--- a/helm/content-fluentd/templates/daemonset.yaml
+++ b/helm/content-fluentd/templates/daemonset.yaml
@@ -18,8 +18,7 @@ spec:
         app: {{ .Values.service.name }}
     spec:
       tolerations:
-      - key: node-role.kubernetes.io/master
-        effect: NoSchedule
+      - operator: "Exists"
       containers:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Chart.Version }}"
@@ -52,6 +51,21 @@ spec:
             secretKeyRef:
               name: content-fluentd
               key: aws.region
+        - name: S3_ACCESS_KEY
+          valueFrom:
+            secretKeyRef:
+              name: splunk-forwarder
+              key: aws.access_key_id
+        - name: S3_SECRET_ACCESS_KEY
+          valueFrom:
+            secretKeyRef:
+              name: splunk-forwarder
+              key: aws.secret_access_key
+        - name: BUCKET_NAME
+          valueFrom:
+            configMapKeyRef:
+              name: global-config
+              key: splunk.forwarder.s3.bucket
         ports:
         - name: http-input
           containerPort: 8080
