--- a/helm/content-fluentd/templates/daemonset.yaml
+++ b/helm/content-fluentd/templates/daemonset.yaml
@@ -14,6 +14,10 @@ spec:
     type: "RollingUpdate"
   template:
     metadata:
+{{- with .Values.annotations }}
+      annotations:
+{{ toYaml . | indent 8 }}
+{{- end }}
       labels:
         app: {{ .Values.service.name }}
     spec:
@@ -51,16 +55,6 @@ spec:
             secretKeyRef:
               name: content-fluentd
               key: aws.region
-        - name: S3_ACCESS_KEY
-          valueFrom:
-            secretKeyRef:
-              name: splunk-forwarder
-              key: aws.access_key_id
-        - name: S3_SECRET_ACCESS_KEY
-          valueFrom:
-            secretKeyRef:
-              name: splunk-forwarder
-              key: aws.secret_access_key
         - name: BUCKET_NAME
           valueFrom:
             configMapKeyRef:
