--- a/helm/content-fluentd/templates/daemonset.yaml
+++ b/helm/content-fluentd/templates/daemonset.yaml
@@ -21,11 +21,17 @@ spec:
       labels:
         app: {{ .Values.service.name }}
     spec:
-      nodeSelector:
-        alpha.eksctl.io/nodegroup-name: ng-common
-        alpha.eksctl.io/nodegroup-name: ng-prom
       tolerations:
       - operator: "Exists"
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: alpha.eksctl.io/nodegroup-name
+                operator: NotIn
+                values:
+                - ng-kiam
       containers:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Chart.Version }}"
