--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -126,6 +126,20 @@
     </parse>
 </filter>
 
+#Parse PAM logs (via custom regex)
+<filter docker.service_name.*>
+    @type parser
+    key_name MESSAGE
+    # Remove MESSAGE field if parsing is successful
+    remove_key_name_field false
+    reserve_data true
+    emit_invalid_record_to_error false
+    <parse>
+          @type regexp
+          expression /uuid=([\da-f-]*) readEnv=([\w-]*) transaction_id=([\S]+) publishDate=(\d*) publishOk=(\w*) duration=(\d*) endpoint=([\w-]*)/
+    </parse>
+</filter>
+
 #### END PARSE Section #####
 
 # Add event_time as kinesis doesn't support @time (Annotations logs only)
