--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -136,7 +136,7 @@
     emit_invalid_record_to_error false
     <parse>
           @type regexp
-          expression /uuid=([\da-f-]*) readEnv=([\w-]*) transaction_id=([\S]+) publishDate=(\d*) publishOk=(\w*) duration=(\d*) endpoint=([\w-]*)/
+          expression /UUID=([\da-f-]*) readEnv=([\w-]*) transaction_id=([\S]+) publishDate=(\d*) publishOk=(\w*) duration=(\d*) endpoint=([\w-]*)/
     </parse>
 </filter>
 
