--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -122,7 +122,7 @@
     emit_invalid_record_to_error false
     <parse>
           @type regexp
-          expression /UUID=(?<UUID>[\da-f-]*) readEnv=(?<readEnv>[\w-]*) transaction_id=(?<transaction_id>[\S]+) publishDate=(?<publishDate>\d*) publishOk=(?<publishOk>\w*) duration=(?<duration>\d*) endpoint=(?<endpoint>[\w-]*)/
+          expression /UUID=(?<uuid>[\da-f-]*) readEnv=(?<readEnv>[\w-]*) transaction_id=(?<transaction_id>[\S]+) publishDate=(?<publishDate>\d*) publishOk=(?<publishOk>\w*) duration=(?<duration>\d*) endpoint=(?<endpoint>[\w-]*)/
     </parse>
 </filter>
 
