--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -112,6 +112,20 @@
     </parse>
 </filter>
 
+#Parse PAM logs (via custom regex)
+<filter docker.service_name.*>
+    @type parser
+    key_name MESSAGE
+    # Remove MESSAGE field if parsing is successful
+    remove_key_name_field false
+    reserve_data true
+    emit_invalid_record_to_error false
+    <parse>
+          @type regexp
+          expression /UUID=(?<uuid>[\da-f-]*) readEnv=(?<readEnv>[\w-]*) transaction_id=(?<transaction_id>[\S]+) publishDate=(?<publishDate>\d*) publishOk=(?<publishOk>\w*) duration=(?<duration>\d*) endpoint=(?<endpoint>[\w-]*)/
+    </parse>
+</filter>
+
 #### END PARSE Section #####
 
 # Add event_time as kinesis doesn't support @time (Annotations logs only)
