--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -126,7 +126,7 @@
     </parse>
 </filter>
 
-#Parse PAM logs (via custom regex)
+#Parse Java errors logs (via custom regex)
 <filter docker.service_name.*>
     @type parser
     key_name MESSAGE
@@ -136,7 +136,7 @@
     emit_invalid_record_to_error false
     <parse>
           @type regexp
-          expression /UUID=(?<uuid>[\da-f-]*) readEnv=(?<readEnv>[\w-]*) transaction_id=(?<transaction_id>[\S]+) publishDate=(?<publishDate>\d*) publishOk=(?<publishOk>\w*) duration=(?<duration>\d*) endpoint=(?<endpoint>[\w-]*)/
+          expression /(?<level>[A-Z]{4,5}) (\[(?<timestamp>[0-9\-:,\s]*)\]) (?<message>(.*))/
     </parse>
 </filter>
 
