Fix java expression

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -136,7 +136,7 @@
     emit_invalid_record_to_error false
     <parse>
           @type regexp
-          expression /(?<level>[A-Z]{4,5}) (\[(?<timestamp>[0-9\-:,\s]*)\]) (?<message>(.*))/
+          expression /(?<level>[A-Z]{4,5}) (\[(?<timestamp>[0-9\-:,\s]*)\]) .+/
     </parse>
 </filter>
 
