--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -130,13 +130,13 @@
 <filter docker.service_name.*>
     @type parser
     key_name MESSAGE
-    # Remove MESSAGE field if parsing is successful
+    # Not remove MESSAGE field even parsing is successful
     remove_key_name_field false
     reserve_data true
     emit_invalid_record_to_error false
     <parse>
           @type regexp
-          expression /(?<level>[A-Z]{4,5}) (\[(?<timestamp>[0-9\-:,\s]*)\]) .+/
+          expression /(?<level>[A-Z]{4,5})\s{1,2}(\[(?<timestamp>[0-9\-:,\s]*)\]) .+/
     </parse>
 </filter>
 
