--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -126,6 +126,20 @@
     </parse>
 </filter>
 
+#Parse Java errors logs (via custom regex)
+<filter docker.service_name.*>
+    @type parser
+    key_name MESSAGE
+    # Not remove MESSAGE field even parsing is successful
+    remove_key_name_field false
+    reserve_data true
+    emit_invalid_record_to_error false
+    <parse>
+          @type regexp
+          expression /(?<level>[A-Z]{4,5})\s{1,2}(\[(?<timestamp>[0-9\-:,\s]*)\]) .+/
+    </parse>
+</filter>
+
 #### END PARSE Section #####
 
 # Add event_time as kinesis doesn't support @time (Annotations logs only)
