Tag systemd-journald.service logs

--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -57,11 +57,18 @@
       tag docker.annotations
    </rule>
    
-   # Tag rest of the journald services 
+   # Tag kubelet services 
    <rule>
       key   SYSTEMD_UNIT
       pattern kubelet.service
       tag   docker.service_name.kubelet
+   </rule>
+   
+   # Tag system logs
+   <rule>
+      key   SYSTEMD_UNIT
+      pattern systemd-journald.service
+      tag   docker.service_name.systemd_journald
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
