--- a/conf/docker.conf
+++ b/conf/docker.conf
@@ -57,18 +57,18 @@
       tag docker.annotations
    </rule>
    
-   # Tag kubelet services 
+   # Tag kubelet service logs
    <rule>
       key   SYSTEMD_UNIT
       pattern kubelet.service
       tag   docker.service_name.kubelet
    </rule>
    
-   # Tag system logs
+   # Tag kernel logs
    <rule>
-      key   SYSTEMD_UNIT
-      pattern systemd-journald.service
-      tag   docker.service_name.systemd_journald
+      key   SYSLOG_IDENTIFIER
+      pattern kernel
+      tag docker.service_name.kernel
    </rule>
 
    # Re-route logs to tags that include their service name (for per-service processing)
