Add kernel logs  (#14)
* Get kernel logs

Co-authored-by: Kalin Arsov <kalin.arsov@ft.com>

--- a/conf/systemd.conf
+++ b/conf/systemd.conf
@@ -5,7 +5,7 @@
   @log_level info
   tag docker.source
   # Match only docker.service, kubelet.service, authorized_keys.service, init.scope logs from Journld
-  matches [{"_SYSTEMD_UNIT": ["docker.service", "kubelet.service", "authorized_keys.service", "init.scope"]}]
+  matches [{"_SYSTEMD_UNIT": ["docker.service", "kubelet.service", "authorized_keys.service", "init.scope"]}, {"SYSLOG_IDENTIFIER": "kernel"}]
   path /var/log/journal #default
   #Set time key to unixtime (SPLUNK expected epoc)
   <storage>
