--- a/helm/content-fluentd/app-configs/content-fluentd_pac_prod.yaml
+++ b/helm/content-fluentd/app-configs/content-fluentd_pac_prod.yaml
@@ -3,3 +3,4 @@ service:
   name: content-fluentd
 kinesis:
   content.fluentd.kinesis.stream: content-fluentd-kinesis-prod-ContentFluentdKinesisStream-1Q43UOSV3G09U
+  kinesis.aws.region: eu-west-1
