--- a/helm/content-fluentd/app-configs/content-fluentd_publishing_staging.yaml
+++ b/helm/content-fluentd/app-configs/content-fluentd_publishing_staging.yaml
@@ -3,3 +3,4 @@ service:
   name: content-fluentd
 kinesis:
   content.fluentd.kinesis.stream: content-fluentd-kinesis-staging-ContentFluentdKinesisStream-VG15XCM82X22
+  kinesis.aws.region: eu-west-1
