Add PAC test clusters

--- a/helm/content-fluentd/values.yaml
+++ b/helm/content-fluentd/values.yaml
@@ -1,6 +1,8 @@
 service:
   name: "" # The name of the service, should be defined in the specific app-configs folder.
 
+eksCluster: false
+
 image:
   repository: coco/content-fluentd
   pullPolicy: IfNotPresent
